// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`codetalk basic.codetalk parses correctly 1`] = `
Array [
  Array [
    "codetalk",
    Array [
      "slide",
      Array [
        Array [
          Array [
            "#",
            "hello world",
          ],
        ],
        Array [
          Array [
            "##",
            " goodbye",
          ],
        ],
        Array [
          "idk why you say goodbye",
        ],
      ],
      "end",
    ],
    Array [
      "slide",
      Array [
        Array [
          "goodbye world",
        ],
      ],
      "end",
    ],
  ],
]
`;

exports[`codetalk complex.codetalk parses correctly 1`] = `
Array [
  Array [
    "codetalk",
    Array [
      "slide",
      Array [
        Array [
          Array [
            "#",
            "hello world",
          ],
        ],
        Array [
          Array [
            "##",
            "this is code talk",
          ],
          Array [
            Array [
              "
",
            ],
          ],
        ],
        Array [
          "idk why you say goodbye",
        ],
      ],
      "end",
    ],
  ],
]
`;

exports[`codetalk hello_world.codetalk parses correctly 1`] = `
Array [
  Array [
    "codetalk",
    Array [
      "slide",
      Array [
        Array [
          "hello world",
        ],
      ],
      "end",
    ],
  ],
]
`;
